force-app/main/default/objects/NewsOfTheWeek__c/NewsOfTheWeek__c.object-meta.xml
<CustomObject>
    <description>Weekly news digest generated for a salesperson across their owned accounts.</description>
    <label>News Of The Week</label>
    <nameField>
        <displayFormat>NOTW-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>News Of The Week</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>