force-app/main/default/objects/NewsOfTheWeek__c/fields/Active_Streams__c.field-meta.xml
<CustomField>
    <fullName>Active_Streams__c</fullName>
    <description>Number of parallel batch streams still running. Decremented atomically by each stream's finish() when the stream has no more pages. Whichever stream brings this to 0 enqueues the WeeklySummaryQueueable.</description>
    <label>Active Streams</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>