force-app/main/default/objects/NewsOfTheWeek__c/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <description>Per-account or summarization errors captured during the run.</description>
    <label>Error Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>