force-app/main/default/objects/NewsOfTheWeek__c/fields/Frequency_Days__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Days__c</fullName>
    <description>Interval in days between automatic runs (e.g. 7 = weekly, 14 = every two weeks, 30 = monthly). Defaults to 7 if blank.</description>
    <label>Frequency (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>