force-app/main/default/objects/NewsOfTheWeek__c/fields/News_Head__c.field-meta.xml
<CustomField>
    <fullName>News_Head__c</fullName>
    <description>Consolidated executive brief synthesized from all AccountNews children.</description>
    <label>News Head</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>