force-app/main/default/objects/NewsOfTheWeek__c/fields/Next_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Run_Date__c</fullName>
    <description>The next date this digest is scheduled to run automatically. Advanced by Frequency (Days) after each scheduled run.</description>
    <label>Next Run Date</label>
    <type>Date</type>
</CustomField>