force-app/main/default/objects/NewsOfTheWeek__c/fields/Notify_Rep_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Notify_Rep_By_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the automatic pipeline emails the generated PDF to the salesperson after a run completes. When unchecked, the PDF is still generated but no email is sent. The manual Send to Rep action ignores this flag.</description>
    <label>Notify Rep By Email</label>
    <type>Checkbox</type>
</CustomField>