force-app/main/default/objects/NewsOfTheWeek__c/fields/Partial_Summaries__c.field-meta.xml
<CustomField>
    <fullName>Partial_Summaries__c</fullName>
    <description>Map-reduce scratch space: each chunk's partial summary is appended here during the MAP phase. The REDUCE phase summarizes these partials into News_Head__c. Cleared on reset and at the start of each run.</description>
    <label>Partial Summaries</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>