force-app/main/default/objects/NewsOfTheWeek__c/fields/Processed_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Processed_Accounts__c</fullName>
    <description>Counter of completed per-account workers. The job that increments this to Total_Accounts__c enqueues the WeeklySummaryQueueable.</description>
    <label>Processed Accounts</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>