force-app/main/default/objects/NewsOfTheWeek__c/fields/Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Date__c</fullName>
    <description>Date the digest was launched.</description>
    <label>Run Date</label>
    <type>Date</type>
</CustomField>