force-app/main/default/objects/NewsOfTheWeek__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The salesperson whose owned accounts are researched in this digest. Required at the layout level (User lookups cannot be required at field level).</description>
    <label>Salesperson</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>News Of The Week</relationshipLabel>
    <relationshipName>NewsOfTheWeek</relationshipName>
    <type>Lookup</type>
</CustomField>