force-app/main/default/objects/NewsOfTheWeek__c/fields/Schedule_Active__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the NewsOfTheWeekScheduler will launch this digest automatically on Next Run Date and reschedule by Frequency (Days).</description>
    <label>Schedule Active</label>
    <type>Checkbox</type>
</CustomField>