force-app/main/default/objects/NewsOfTheWeek__c/fields/Total_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Accounts__c</fullName>
    <description>Total number of accounts to research in this run. Stamped by NewsOfTheWeekController.launch.</description>
    <label>Total Accounts</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>